feat: enhance BeautyProfile and Question models with new methods
- Added static method `createForUser` in BeautyProfile for user profile creation.
- Introduced `updateAttributes` method in BeautyProfile to streamline attribute updates.
- Implemented list parsing methods in BeautyProfile for skin concerns and preferences.
- Refactored SaveBeautyProfileUseCase to utilize new methods for profile management.
- Enhanced Question model with a static `create` method and search criteria matching methods.
- Updated ListQuestionsUseCase to leverage new Question search criteria functionality.

These changes improve the encapsulation and usability of the BeautyProfile and Question models, promoting cleaner code and better maintainability.